--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Core/vendor/glfw"]
 	path = Core/vendor/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "Core/vendor/imgui"]
+	path = Core/vendor/imgui
+	url = https://github.com/ocornut/imgui.git
