--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Core/vendor/imgui"]
 	path = Core/vendor/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "Core/vendor/glm"]
+	path = Core/vendor/glm
+	url = https://github.com/g-truc/glm.git
