--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Core/vendor/glm"]
 	path = Core/vendor/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "Core/vendor/assimp"]
+	path = Core/vendor/assimp
+	url = https://github.com/AminAliari/assimp.git
