--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,5 +1,4 @@
 [Window][Dockspace demo]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -21,7 +20,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace   ID=0x24CA8814 Window=0xA9281B80 Pos=218,305 Size=1280,682 Split=X
+DockSpace   ID=0x24CA8814 Pos=228,238 Size=1280,682 Split=X
   DockNode  ID=0x00000001 Parent=0x24CA8814 SizeRef=188,682 Selected=0x199AB496
   DockNode  ID=0x00000002 Parent=0x24CA8814 SizeRef=1090,682 CentralNode=1 Selected=0x13926F0B
 
