--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,26 +1,27 @@
 [Window][Dockspace demo]
-Size=1280,720
+Pos=0,0
+Size=1048,671
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
+Pos=346,138
 Size=400,400
 Collapsed=0
 
 [Window][Properties]
 Pos=0,38
-Size=188,682
+Size=188,633
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Viewport]
 Pos=190,38
-Size=1090,682
+Size=858,633
 Collapsed=0
 DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace   ID=0x24CA8814 Pos=228,238 Size=1280,682 Split=X
+DockSpace   ID=0x24CA8814 Window=0xA9281B80 Pos=137,297 Size=1048,633 Split=X
   DockNode  ID=0x00000001 Parent=0x24CA8814 SizeRef=188,682 Selected=0x199AB496
   DockNode  ID=0x00000002 Parent=0x24CA8814 SizeRef=1090,682 CentralNode=1 Selected=0x13926F0B
 
