ImGui settings panel WIP, Model static generation + a bunch of small improvements.

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,27 +1,132 @@
 [Window][Dockspace demo]
 Pos=0,0
-Size=1048,671
+Size=1280,720
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=346,138
+Pos=217,26
 Size=400,400
 Collapsed=0
 
 [Window][Properties]
-Pos=0,38
-Size=188,633
+Pos=10,10
+Size=392,700
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Viewport]
-Pos=190,38
-Size=858,633
+Pos=404,10
+Size=866,700
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
+
+[Window][File dialog##filebrowser_2971297729336]
+Pos=283,124
+Size=764,414
+Collapsed=0
+
+[Window][File dialog##filebrowser_140701212700016]
+Pos=396,234
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140700617960816]
+Pos=300,225
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140696498826608]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140701052464496]
+Pos=359,132
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140702981909856]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140697908571488]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140694864157936]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140698963107056]
+Pos=381,315
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140701644578032]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140700149046512]
+Pos=348,352
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140698778098928]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140698998299888]
+Pos=270,204
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140701341342960]
+Pos=306,352
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140698886757616]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140697657105648]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140695480524016]
+Pos=414,264
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140697752591600]
+Pos=323,280
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140701260012784]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140697177644272]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140700118834416]
+Pos=295,268
+Size=700,450
+Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0x24CA8814 Window=0xA9281B80 Pos=137,297 Size=1048,633 Split=X
-  DockNode  ID=0x00000001 Parent=0x24CA8814 SizeRef=188,682 Selected=0x199AB496
-  DockNode  ID=0x00000002 Parent=0x24CA8814 SizeRef=1090,682 CentralNode=1 Selected=0x13926F0B
+DockSpace   ID=0x24CA8814 Window=0xA9281B80 Pos=75,226 Size=1260,700 Split=X
+  DockNode  ID=0x00000001 Parent=0x24CA8814 SizeRef=392,700 HiddenTabBar=1 Selected=0x199AB496
+  DockNode  ID=0x00000004 Parent=0x24CA8814 SizeRef=866,700 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
 
