Fixed several bugs, GUI ready.

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -125,8 +125,193 @@ Pos=295,268
 Size=700,450
 Collapsed=0
 
+[Window][File dialog##filebrowser_140698919362000]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140699962432976]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140697403055568]
+Pos=285,177
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140695046643152]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140700622577104]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140702204812752]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140700750241232]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140701250346448]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140697889005008]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140700760399312]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140701343276496]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140702089076176]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140696417459664]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140695792016624]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140700733824240]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140702285585648]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140695818624240]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140701042498800]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140696068582640]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140703019261168]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140700430134512]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140696954760432]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140695324159216]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140702339460336]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140698857299408]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140696478645600]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140700527656288]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140700058021104]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140698375646448]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140697807121648]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140697450802416]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140695004605680]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140701273713904]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140694970592496]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140696254573808]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140694834474224]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140701506759920]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
 [Docking][Data]
-DockSpace   ID=0x24CA8814 Window=0xA9281B80 Pos=75,226 Size=1260,700 Split=X
+DockSpace   ID=0x24CA8814 Window=0xA9281B80 Pos=148,171 Size=1260,700 Split=X
   DockNode  ID=0x00000001 Parent=0x24CA8814 SizeRef=392,700 HiddenTabBar=1 Selected=0x199AB496
   DockNode  ID=0x00000004 Parent=0x24CA8814 SizeRef=866,700 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
 
