Did some code cleaning and overall finishing. Version 1 is now done!

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -310,8 +310,23 @@ Pos=290,135
 Size=700,450
 Collapsed=0
 
+[Window][File dialog##filebrowser_140698667347184]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140696520785136]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
+[Window][File dialog##filebrowser_140697026985216]
+Pos=290,135
+Size=700,450
+Collapsed=0
+
 [Docking][Data]
-DockSpace   ID=0x24CA8814 Window=0xA9281B80 Pos=148,171 Size=1260,700 Split=X
+DockSpace   ID=0x24CA8814 Window=0xA9281B80 Pos=213,159 Size=1260,700 Split=X
   DockNode  ID=0x00000001 Parent=0x24CA8814 SizeRef=392,700 HiddenTabBar=1 Selected=0x199AB496
   DockNode  ID=0x00000004 Parent=0x24CA8814 SizeRef=866,700 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
 
